# CPP_Kerr_Tracing

./: .gitignore  CMakeLists.txt  Classes.cpp  Classes.h  Classes2.cpp  Drawables.h  Makefile  README.md  Renderer  Renderer.cpp  Renderer2  Renderer2.cpp  Renderer2.h  ShaderClass.h  Template_Drawing_With_Mouse.cpp  Template_Renderer_Class.cpp  blcoordinate.mod  constants.mod  cpp_test_function.cpp  ellfunction.mod  my_program  myprogram2  obsemitter.mod  pemfinding.mod  rootsfinding.mod  sphericalmotion.mod  ynogk.f90
.github/workflows/: c-cpp.yml  ci.yml  flawfinder.yml
Shaders/: fShader.fs  vShader.vs
cmake/Modules/: FindCFITSIO.cmake
configuration/: root_directory.h
helpers/: CameraClass.h  Classes2_lib.h  Classes_lib.h  Drawables.h  Renderer.h  Renderer2.h  ShaderClass.h  coordinates.h
include/Kerr_Sim/Shaders/: fShader.fs  skyboxShader.fs  skyboxShader.vs  vShader.vs
include/Kerr_Sim/helpers/: CameraClass.h  Classes_lib.h  Cubemap.h  Drawables.h  Renderer2.h  coordinates.h
include/VPCS/: helper_functions.h
rays/: blcoordinate.mod  constants.mod  ellfunction.mod  obsemitter.mod  pemfinding.mod  ray  rayx2.txt  rayy2.txt  rayz2.txt  rootsfinding.mod  sphericalmotion.mod
shadows/: colorbar.pro  shadow.pro
src/: CMakeLists.txt  main.cpp  ynogk.f90
src/FITS_WRITE/: CMakeLists.txt  main.cpp
src/FITS_WRITE/test/: Fitstest.cpp
src/OpenGL/: CMakeLists.txt  main.cpp
src/OpenGL/test/: main.cpp
src/Shadows/: CMakeLists.txt  main.cpp
src/Thin_Disk/: CMakeLists.txt  main.cpp
src/VP_CS/: CMakeLists.txt  main.cpp
test/: test_fortran_functions.cpp
thin disk/: colorbar.pro  thind_axis.pro
warped disk/: blcoordinate.mod  colorbar.pro  constants.mod  ellfunction.mod  obsemitter.mod  pemfinding.mod  rootsfinding.mod  sphericalmotion.mod  warp  warp.f90  warp.pro
